--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
     "bootstrap": "^4.6.0",
+    "creditcardpayments": "^1.0.3",
     "jquery": "^3.5.1",
     "ngx-bootstrap": "^6.2.0",
     "ngx-order-pipe": "^2.1.1",
